# Context

./: .gitignore  Cargo.toml  README.md  a3s.example.yaml  justfile
.github/workflows/: ci.yml
benches/: retrieval_bench.rs
examples/: quick_start.rs
src/: config.rs  core.rs  digest.rs  embedding.rs  error.rs  ingest.rs  lib.rs  main.rs  pathway.rs  retrieval.rs  session.rs
src/rerank/: cohere.rs  jina.rs  mock.rs  mod.rs  openai.rs
src/storage/: local.rs  memory.rs  mod.rs  vector_index.rs
tests/: integration_test.rs
