[package]
name = "a3s_context"
version = "0.1.0"
edition = "2021"
authors = ["A3S Team"]
description = "Autonomous Agent Adaptive Storage - A hierarchical context management system for AI agents"
license = "MIT"
repository = "https://github.com/A3S-Lab/Context"
keywords = ["ai", "agent", "context", "rag", "vector-search"]
categories = ["database", "text-processing"]

[lib]
name = "a3s_context"
path = "src/lib.rs"

[[bin]]
name = "a3s-ctx"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"

# Regex
regex = "1.10"

# Glob patterns
glob = "0.3"

# File system
walkdir = "2.5"
notify = "6.1"

# Concurrent data structures
dashmap = "6.0"
parking_lot = "0.12"

# Channel
crossbeam-channel = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
config = "0.14"
directories = "5.0"

# Template engine
tera = "1.20"

# URL parsing
url = "2.5"

# Base64
base64 = "0.22"

# Numeric
ordered-float = "4.2"

# Temp files (for examples)
tempfile = "3.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "retrieval_bench"
harness = false

[features]
default = ["local-storage"]
local-storage = []
remote-storage = []
python-bindings = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
